@@ -3,6 +3,7 @@
   For more precise details see: http://bit.ly/d3C6S1
 
 == Unreleased Changes
+* Add implementation for Kernel#exit!
 
 == Changes for 24864 2010-12-14
 * No Ruby code changes
